invisible bridge. fix fall

--- a/res/ui/style/knowledge.less
+++ b/res/ui/style/knowledge.less
@@ -11,8 +11,7 @@ knowledge-window {
 	knowledgeComp {
 		align: middle middle;
 		max-width:200;
-		// content-align: middle middle;
-		padding: 5;
+		content-align: middle middle;
 		&.discovered {
 			text {
 				color : green;
